# esp-mqtt-telegram

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  environment_template.env  logger.py  main.py  managers.py  models.py  mqtt_client.py  requirements.txt  telegram_bot.py
esp-app/: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
esp-app/main/: CMakeLists.txt  Kconfig.projbuild  esp-app.c  idf_component.yml  mqtt_client.c  relay_control.c  rgb_led_manager.c  wifi_manager.c
esp-app/main/includes/: mqtt_manager.h  relay_control.h  rgb_led_manager.h  wifi_manager.h
